--- a/files/bibtex1.bib
+++ b/files/bibtex1.bib
@@ -1,4 +1,4 @@
-@article{Alice2023example,
+@article{sharpless,
     title={An Example Article},
     author={Alice, Bob and Charlie},
     journal={Journal of Examples},
